# cpphdl

./: CHANGELOG.md  CMakeLists.txt  Comb.cpp  Comb.h  Combs.cpp  Combs.h  Debug.h  Enum.cpp  Enum.h  Expr.cpp  Expr.h  Field.cpp  Field.h  Method.cpp  Method.h  Module.cpp  Module.h  Optimizer.cpp  Optimizer.h  Port.h  Project.cpp  Project.h  README.md  Register.h  Struct.cpp  Struct.h  cpphdl.cpp  helpers.cpp  helpers.h  json_output.cpp  json_output.h  main.cpp  main.h  requirements.yaml
examples/: CMakeLists.txt  Predef.sv  predef.sv  tools.h
examples/avalon/: AvalonEndpoint.cpp
examples/axi/: Axi4.h  Axi4Mux.cpp  Axi4MuxFromSlave.cpp  Axi4MuxToMaster.cpp
examples/basic/: Buffer.cpp  Fifo.cpp  Fifo.h  Memory.cpp  Memory.h
examples/cpu/: DecodeFetch.h  ExecuteCalc.h  File.h  Instr.h  MemWB.h  Memory.h  MemoryAccess.h  Pipeline.h  Ram.h  RiscV.cpp  WriteBack.h
examples/math/: FpConverter.cpp
examples/riscv/: Pipeline.h  RiscV.cpp  pipeline.h  riscv.cpp
examples/tuple/: DecodeFetch.h  ExecuteCalc.h  File.h  Instr.h  MemWB.h  Memory.h  Pipeline.h  Ram.h  RiscV.cpp  rv32i.S  rv32i.c
hdlcpp/: CMakeLists.txt  hdlcpp.cpp  hdlcpp.h  hdlcpp_comb.h  hdlcpp_common.cc  hdlcpp_emit.cc  hdlcpp_expr.cc  hdlcpp_frontend.cc
hdlcpp/tests/: test_combs.cpp  test_modules.cpp  test_structs.cpp
hdlcpp/tests/cva6/: build.sh  convert.sh  matrix_multiply.cpp  matrix_multiply.riscv  run.sh
tests/: CMakeLists.txt
tests/code/: AssignCombNoCache.cpp  AssignPorts.cpp  CastTypes.cpp  CatBus.cpp  CodeReturn.cpp  CombFunc.cpp  ConstexprPortSize.cpp  ImplicitWork.cpp  InheritedHelperNoPackage.cpp  LogicCast.cpp  MemberArray.cpp  MemberAssignGenvars.cpp  Snprintf.cpp  StaticMethod.cpp  SwitchReturn.cpp  TemplateMember.cpp  TemplateModuleName.cpp  TemplateStaticCall.cpp  TypeTemplateModule.cpp  VarArray.cpp  VarInit.cpp
tests/datatypes/: ArrayLayout.cpp  ArrayPacked.cpp  ArrayUnpacked.cpp  BitopsLayout.cpp  BlockingOptimize.cpp  ConstexprHelpers.cpp  DataTypes.cpp  Datatypes.cpp  LogicBitsIndexing.cpp  LogicBitsWiden.cpp  LogicLayout.cpp  SvAssignFieldPackedArray.cpp  SvCastReg.cpp  datatypes.cpp
tests/format/: AnnotateMany.cpp  AnnotateReplacement.cpp  AnnotateReplacementFile.sv  AnnotateReplacementScript.sh  AnnotationInCode.cpp
tests/interface/: AssignIfIndexedProxy.cpp  InterfaceModuleArray.cpp  NestedInterfaces.cpp  ValidReady.cpp
tests/json/: JsonNoSynthesisFlag.cpp  json_output.cpp
tests/structs/: ArrayInStruct.cpp  EmptyArrayField.cpp  ModuleStruct.cpp  StructAlignment.cpp  StructInit.cpp  UnionParamAccess.cpp
tests/templates/: TemplateArrayDimension.cpp  TemplateArrayPortMember.cpp  TemplateBaseAliasPackage.cpp  TemplateDefaultParameter.cpp  TemplateEmptyStructArg.cpp  TemplateInheritedBaseArray.cpp  TemplateInterfaceParameter.cpp  TemplateMember.cpp  TemplateModuleBase.cpp  TemplateModuleName.cpp  TemplateModuleSpecialization.cpp  TemplateStaticCall.cpp  TemplateStructSpecialization.cpp  TemplateSymbolicWidthCast.cpp
tribe/: BranchPredictor.h  CMakeLists.txt  CSR.h  Config.h  Decode.h  Execute.h  ExecuteMem.h  InterruptController.h  MMU_TLB.h  Tribe.cpp  Tribe.h  TribeDebug.h  TribeTest.h  TribeTestModule.h  Writeback.h  WritebackMem.h  main.cpp
tribe/SoC/: System.cpp
tribe/cache/: L1Cache.h  L1MemIf.h  L2Cache.h
tribe/cache/l1/: L1Cache.h  L1CacheController.h  L1CacheGeometry.h  L1CacheLookup.h  L1CacheRefill.h  L1CacheRequest.h  L1CacheResponse.h  L1CacheState.h
tribe/cache/l1/tests/: CMakeLists.txt  L1CacheGeometry_test.cpp  L1CacheGeometry_test.h  L1CacheLookup_test.cpp  L1CacheLookup_test.h  L1CacheRefill_test.cpp  L1CacheRefill_test.h  L1CacheRequest_test.cpp  L1CacheRequest_test.h  L1CacheResponse_test.cpp  L1CacheResponse_test.h  L1CacheState_test.cpp  L1CacheState_test.h  L1CacheTestCommon.h  L1Cache_test.cpp  L1Cache_test.h
tribe/cache/l2/: L2Cache.h  L2CacheByteOps.h  L2CacheController.h  L2CacheGeometry.h  L2CacheMemory.h  L2CacheOO.h  L2CachePortOps.h  L2CacheRegionRouter.h  L2CacheRequest.h  L2CacheResponseGlue.h  L2CacheState.h  L2CacheTagData.h  L2CacheTagOps.h  L2CacheTimeoutOps.h  L2CacheWait.h
tribe/cache/l2/tests/: CMakeLists.txt  L2CacheByteOps_test.cpp  L2CacheByteOps_test.h  L2CacheGeometry_test.cpp  L2CacheOO_test.h  (+17 more)
tribe/code/: accelerator.c  accelerator.h  c_start.S  checkpoint_isr.S  checkpoint_isr.c  clint.c  clint.elf  clint.h  clock_test.c  cpp_link.ld  cpp_start.S  cpp_syscalls.c  cpp_test.cpp  cpu_bytecopy.c  cpu_bytecopy.elf  cpu_fence.c  cpu_fence.elf  cpu_irq_atomic_hazard.c  cpu_irq_load_hazard.c  cpu_sbi_return.S  cpu_time_csr.c  cpu_trap_ra.S  cpu_unaligned_wordcopy.c  ethgig.h  ethgig_test.cpp  mmu_tlb.c  ns16550a.S  ns16550a.elf  perf_kernel_slice.c  rv32i.S  rv32i.c  rv32i.elf  sd_test.c  uart.S  uart.elf  uart.h
tribe/common/: Axi4.h  Axi4Ram.h  Axi4RegionMux.h  File.h  Memory.h  RAM.h  RAM1PORT.h  Ram.h
tribe/devices/: Accelerator.cpp  Accelerator.h  CLINT.h  IOUART.h  NS16550A.h  PLIC.h
tribe/devices/sd/: SDController.h  SDFifo.h  SDPhysical.h  SDTypes.h  sd_io.h
tribe/linux/: .config  .prepare_linux.sh  .prepare_sd.sh  config32.dts  config32.initramfs.dts  run_linux_probe.sh  tribe_sd.c  vmlinux.tgz
tribe/linux/net/: .start_tap.sh  ethgig_tap.cpp
tribe/spec/: Rv32i.h  Rv32ia.h  Rv32ic.h  Rv32im.h  State.h  Zicsr.h
tribe/tests/: .gitignore  .load_sail_riscv_sim.sh  .load_spike.sh  .run_riscv-dv_tests.sh  .run_riscv_arch_tests.sh  .run_riscv_tests.sh  .run_spike_fragments_tests.sh  Accelerator_test.cpp  BranchPredictor_test.cpp  CLINT_test.cpp  CMakeLists.txt  CPU_test.cpp  Checkpoint_test.cpp  Cpp_test.cpp  EthGigCPU_test.cpp  EthGigDMA_test.cpp  EthGigMac_test.cpp  IOUART_test.cpp  L1Cache_test.cpp  L2Cache_test.cpp  Linux_test.cpp  MMU_TLB_Test.cpp  Multicore_test.cpp  NS16550A_test.cpp  PLIC_test.cpp  Perf_test.cpp  SD_test.cpp  spec_decode_tests.cpp
tribe/tests/scripts/: ensure_git_repo.py  ensure_riscv_opcodes.py  generate_riscv_opcode_cases.py  run_riscv_arch_test.py  run_riscv_dv.py  run_riscv_tests.py  run_spec_decode_tests.py  run_spike_fragments.py
tribe/verif/: RGMIIVerif.h  SDCardVerif.h
(+35 files in other folders)
